@@ -43,7 +43,7 @@ import SCons.SConf
 import SCons.Script.Main
 import SCons.Tool
 from SCons.Util import is_List, is_String, is_Dict, flatten
-
+from SCons.Node import SConscriptNodes
 from . import Main
 
 import collections
@@ -202,6 +202,7 @@ def _SConscript(fs, *files, **kw):
                 else:
                     f = fs.File(str(fn))
                 _file_ = None
+                SConscriptNodes.add(f)
 
                 # Change directory to the top of the source
                 # tree to make sure the os's cwd and the cwd of
